packages/collie-tests/fixtures/invalid-syntax/src/invalid.collie
! This is intentionally invalid Collie markup so that parser errors can be surfaced later.
